added the script tag in html

--- a/public/index.html
+++ b/public/index.html
@@ -10,4 +10,6 @@
     <h1>Welcome to the Chat App!</h1>
     <p>Our server is up and running.</p>
 </body>
+<script src="/socket.io/socket.io.js"></script>
+    <script src="client.js"></script>
 </html>
