This feature requires updates to all our main files: the HTML for the new element, the CSS to style it, the client-side JavaScript to detect typing, and the server-side JavaScript to broadcast the typing status to other users.

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <!-- This list will hold all our chat messages -->
     <ul id="messages"></ul>
 
+    <!-- This paragraph will display the "is typing..." indicator -->
+    <p id="typing-indicator"></p>
+
     <!-- The form for typing and sending messages -->
     <form id="form" action="">
       <input id="input" autocomplete="off" placeholder="Type a message..." /><button>Send</button>
