This step involves adding a file selection button to our user interface and writing the JavaScript code to read the selected file and send it to our server.

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
             <ul id="messages"></ul>
             <div id="typing-indicator"></div>
             <form id="form" action="">
+                <!-- Hidden file input for selecting images -->
+                <input id="file-input" type="file" accept="image/*" class="hidden"/>
+                <!-- Button to trigger the file input -->
+                <button type="button" id="file-button">📎</button>
                 <input id="input" autocomplete="off" placeholder="Type a message..." /><button>Send</button>
             </form>
         </div>
