--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Username Input Section -->
     <div id="username-container">
         <form id="username-form">
             <input id="username-input" autocomplete="off" placeholder="Enter your username" />
@@ -15,42 +13,45 @@
         </form>
     </div>
 
-    <!-- Main App Container -->
     <div id="app-container" class="hidden">
-        <!-- Sidebar for Users and Voice Chat -->
+        <!-- New Incoming Call Notification -->
+        <div id="incoming-call-container" class="hidden">
+            <span id="incoming-call-info"></span>
+            <button id="accept-call-button">Accept</button>
+            <button id="decline-call-button">Decline</button>
+        </div>
+
         <div id="sidebar">
             <h2>Online Users</h2>
             <ul id="user-list"></ul>
-            
-            <!-- Voice Chat Status and Controls (Initially Hidden) -->
             <div id="voice-chat-status" class="hidden">
-                <h3>In Call</h3>
+                <h3>Voice Chat</h3>
                 <div id="call-info"></div>
                 <div id="voice-chat-controls">
                     <button id="mute-button">Mute</button>
-                    <button id="hang-up-button" class="hang-up-button">Hang Up</button>
+                    <button id="hang-up-button">Hang Up</button>
                 </div>
             </div>
         </div>
 
-        <!-- Main Chat Area -->
-        <div id="chat-container">
-            <ul id="messages"></ul>
+        <div id="chat-window">
+            <div id="chat-container">
+                <ul id="messages"></ul>
+            </div>
             <div id="typing-indicator"></div>
             <form id="form">
-                <button type="button" id="file-button" title="Send a file">📎</button>
-                <input type="file" id="file-input" class="hidden">
-
+                <input type="file" id="file-input" style="display: none;">
+                <button type="button" id="file-button" class="file-upload-button">📎</button>
                 <input id="input" autocomplete="off" placeholder="Type a message..." />
-                <button type="submit">Send</button>
+                <button>Send</button>
             </form>
         </div>
-        
-        <!-- Container for remote audio streams -->
-        <div id="voice-chat-container"></div>
+
+        <div id="voice-chat-container">
+            <!-- Audio elements will be added here -->
+        </div>
     </div>
 
-    <!-- Libraries -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-peer@9.11.1/simplepeer.min.js"></script>
     <script src="client.js"></script>
